<resources>
    <string name="app_name">EChat</string>
    <string name="login_title">用户登录</string>
    <string name="select_avatar">选择头像</string>
    <string name="tap_to_select_avatar">点击头像可更换</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="btn_login">登 录</string>
    <string name="btn_logout">退出登录</string>
    <string name="welcome_default">欢迎回来</string>
    <string name="friends_list">好友列表</string>
    <string name="friend_avatar">好友头像</string>
    <string name="user_avatar">用户头像</string>
</resources>